[metadata]
name = glue-save
url = https://www.glueviz.org
author = 
author_email = 
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: BSD License
description = Search Analysis and Visualization Environment
version = 0.9

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    glue-core
    glue-jupyter
    glue-map@git+https://github.com/jfoster17/glue-map.git
    datacommons_pandas
    
[options.entry_points]
glue.plugins =
    glue-map = glue-map:setup

[options.extras_require]
test =
    pytest
voila =
    voila 
    voila-gridstack

[options.package_data]
* = *.png, *.ui, *.glu, *.hdf5, *.fits, *.xlsx, *.txt, *.csv, *.svg, *.vot, *.bgz, *.tbi
